# qubic-bridge

./: .gitignore  Anchor.toml  Cargo.toml  PITCH_DECK.md  READY_TO_DEPLOY.md
config/: devnet.json  mainnet.json  testnet.json
frontend-demo/: README.md  index.html  script.js  styles.css
programs/bridge/src/: error.rs  lib.rs
programs/bridge/src/instructions/: emergency_pause.rs  emergency_unpause.rs  initialize_bridge.rs  lock_assets.rs  mod.rs  query.rs  remove_validator.rs  unlock_assets.rs  update_bridge_state.rs  update_config.rs
programs/bridge/src/state/: bridge_state.rs  validator_set.rs
programs/validator/: Cargo.toml
programs/validator/src/: error.rs  lib.rs
programs/validator/src/instructions/: mod.rs  register_validator.rs  update_validator_status.rs  validate.rs  validate_transaction.rs
programs/validator/src/state/: mod.rs  validator_state.rs
src/qubic/contracts/: AssetLock.h  Bridge.h  Validator.h
src/qubic/types/: AssetTypes.h  BridgeTypes.h
src/qubic/utils/: Crypto.h  Serialization.h
src/relayer/: Cargo.toml
src/relayer/src/: bridge_relayer.rs  main.rs  qubic_monitor.rs  solana_monitor.rs
src/shared/: Cargo.toml
src/shared/src/: crypto.rs  lib.rs  types.rs
src/solana/client/: Cargo.toml
src/solana/client/src/: bridge_client.rs  main.rs  transaction_builder.rs
src/solana/programs/bridge/: Cargo.toml  Xargo.toml
src/solana/programs/bridge/src/: error.rs  lib.rs
src/solana/programs/bridge/src/instructions/: add_validator.rs  initialize_bridge.rs  lock_assets.rs  mod.rs  unlock_assets.rs  validate_bridge.rs
src/solana/programs/bridge/src/state/: bridge_state.rs  mod.rs
src/solana/programs/validator/: Cargo.toml
src/solana/programs/validator/src/: error.rs  lib.rs
src/solana/programs/validator/src/instructions/: mod.rs
src/solana/programs/validator/src/state/: mod.rs
tests/: Cargo.toml  lib.rs
tests/integration/: bridge_tests.rs  cross_chain_tests.rs
tests/unit/: qubic_tests.cpp  shared_tests.rs  solana_tests.rs
