[package]
name = "bridge-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../src/shared" }
bincode = "1.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[test]]
name = "bridge_tests"
path = "integration/bridge_tests.rs"

[[test]]
name = "cross_chain_tests"
path = "integration/cross_chain_tests.rs"

[[test]]
name = "shared_tests"
path = "unit/shared_tests.rs"

[[test]]
name = "solana_tests"
path = "unit/solana_tests.rs"
