[package]
name = "validator"
version = "0.1.0"
edition = "2021"
description = "Solana program for validator management"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "validator"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
serde = { workspace = true }
hex = "0.4"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
