[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_bytes = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
solana-sdk = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[lib]
crate-type = ["rlib"]